--- a/index.html
+++ b/index.html
@@ -3,9 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ramzan Countdown 2026</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+
+
+
+<h1>🌙 Ramzan Countdown 2026</h1>
+<div id="countdown-box">
+    <div>
+      <span id="months"></span>
+      <p>Months</p>
+    </div>
+    <div>
+      <span id="days"></span>
+      <p>Days</p>
+    </div>
+    <div>
+      <span id="hours"></span>
+      <p>Hours</p>
+    </div>
+    <div>
+      <span id="minutes"></span>
+      <p>Minutes</p>
+    </div>
+    <div>
+      <span id="seconds"></span>
+      <p>Seconds</p>
+    </div>
+  </div>
+
+
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
